--- a/iBored.html
+++ b/iBored.html
@@ -35,21 +35,29 @@
 </template>
 
 <template name="mainPageBody">
-  <ul>
-    {{#each events}}
-      {{> getEvent}}
-    {{/each}}
-  </ul>
+  {{#each events}}
+    {{> getEvent}}
+  {{/each}}
   <button type="button" id="postEvent">Post an Event</button>
 </template>
 
 <template name="getEvent">
-    <li>{{title}}</li>
-    <li>{{hearts}}</li>
-    <li>{{lat}}</li>
-    <li>{{lng}}</li>
+  <div id = "listedEvent">
+    <ul>
+      <li>{{title}}</li>
+      <li>{{hearts}}</li>
+      <li>{{lat}}</li>
+      <li>{{lng}}</li>
+    </ul>
     <br>
+  </div>
 </template>
+
 <template name="eventDetailsBody">
- <p>You got an event detail</p>
+  <p>Got here</p>
+  <p>{{title}}</p>
+  <p>{{startTime}} to {{endTime}}</p>
+  <p>Location: {{nominalLocation}}</p>
+  <p>{{hearts}} people are going</p>
+  
 </template>
