--- a/iBored.html
+++ b/iBored.html
@@ -6,10 +6,13 @@
 <script type = "text/javascript" src="event-lists.js"></script>
   <div id="submit-event-page">
     <header>
+      <script src="js/jquery.js"></script> 
+      <script src="js/moment.min.js"></script> 
+      <script src="js/combodate.js"></script> 
       <h1>Post an Event</h1>
         {{> addEventForm}}
     </header>
-  </div>
+</div>
 
   <div id="main-page">
     <header>
@@ -25,13 +28,31 @@
 
 <template name="addEventForm">
     <form> <!--user submits title, location, start, and end of event-->
-        <p>Event Title: </p><input type="text" name="eventTitle" placeholder="Enter a brief title" /> <!--must be less than 140 char-->
+        <p>Event Title: </p><input type="text" name="eventTitle" placeholder="Enter a brief title" />
         <p>Location: </p><input type="text" name="eventLocation"/>
-        <p>Start Time: </p><input type="text" name="eventStart"/> <!--must be HH:MM PM format-->
-        <p>End Time: </p><input type="text" name="eventEnd"/> <!--must be HH:MM PM format-->
-        <br><input type="submit" value="Submit">
+        
+        <p>Start Time: </p><input type="text" id="startTime" data-format="HH:mm" data-template="HH : mm" name="eventStart">
+<script>
+$(function(){
+    $('#startTime').combodate({
+        firstItem: 'name', //show 'hour' and 'minute' string at first item of dropdown
+        minuteStep: 1
+    });  
+});
+</script>
+        
+        <p>End Time: </p><input type="text" id="time" data-format="HH:mm" data-template="HH : mm" name="eventEnd">
+<script>
+$(function(){
+    $('#time').combodate({
+        firstItem: 'name', //show 'hour' and 'minute' string at first item of dropdown
+        minuteStep: 1
+    });  
+});
+</script>
+        <br><br><input type="submit" value="Submit">
     </form>
-    <button type="button" id="returnToMainPage">Go Back</button>
+  <button type="button" id="returnToMainPage">Go Back</button>
 </template>
 
 <template name="mainPageBody">
